# onboard_dji

./: .gitignore  CMakeLists.txt  README.md  package.xml
guides/: issues.md
include/aerialcore_onboard_dji/: dji_mission_node.h
include/waypointV2/: dji_linux_environment.hpp  dji_linux_helpers.hpp  dji_waypointV2_node.h
launch/: atlas-noetic.launch  atlas.launch  atlas_test.launch  atlas_test1.launch  dji_mission.launch  multimaster-noetic.launch  multimaster.launch  multimasterBatista.launch  resisto.launch
scripts/: dji_image_process.py  dji_multi_track_waypoints.py  dji_save_waypoints.py  dji_track_offline_test.py  dji_track_waypoints.py
src/: .dji_waypointV2_node.cpp.swp  dji_linux_environment.cpp  dji_linux_helpers.cpp  dji_mission_node.cpp  dji_waypointV2_node.cpp  landing_manager.cpp  vs_manager.cpp
srv/: ProcessImg.srv
